--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+version: 1.0.1+3
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
@@ -53,7 +53,7 @@ dependencies:
   shared_preferences: ^2.1.0
   animations: ^2.0.7
   intl: ^0.18.1
-  change_app_package_name: ^1.1.0
+  jiffy: ^6.2.1
   flutter_onboarding_slider: ^1.0.9
   smooth_page_indicator: ^1.1.0
 
