--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   equatable: ^2.0.5
   get_storage: ^2.1.1
-  intl_phone_field: ^3.1.0
+  intl_phone_number_input: ^0.7.3+1
   dots_indicator: ^2.1.0
   flutter_staggered_grid_view: ^0.6.2
   staggered_grid_view_flutter: ^0.0.4
