--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   firebase_core_platform_interface: 4.5.1
   firebase_crashlytics: ^2.2.3
   firebase_core: ^1.19.1
-
+  im_stepper: ^1.0.1+1
 
 dev_dependencies:
   flutter_test:
